# llm-analytics-apps

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  ingest_trace.py  ingest_trace.sh  package.json  pnpm-lock.yaml  prepare.sh  pyproject.toml  run-examples.sh  tsconfig.json
.github/workflows/: codeql.yml
node/: .gitignore  package.json  run.sh  tsconfig.json
node/scripts/: run_test.sh  test-agent-file-parts.ts  test-file-parts.ts  test-ingestion.js  test_vercel_ai_otel.ts  test_vercel_anthropic.ts  test_weather_tool.ts
node/src/: index.ts
python/: main.py  requirements.txt  run.sh  test_event_logger.py  test_otel_v2_logs.py
python/openai_agents/: __init__.py  agents.py  runner.py
python/providers/: __init__.py  anthropic.py  anthropic_streaming.py  base.py  (+21 more)
screenshot-demo/: run.sh  screenshot_demo.py
scripts/: OTEL_TESTING_REFERENCE.md  generate_demo_data.py  generate_many_tools_test_data.py  generate_session_test_data.py  test_ai_events_migration.py  test_claude_agent_sdk.py  test_langchain_otel.py  test_litellm.py  test_pydantic_ai_otel.py  test_vercel_ai_otel.ts  test_vercel_anthropic.ts
src/: attachment_statusbar.tsx  bottombar.tsx  chat.tsx  exit.tsx  focus_context.tsx  fullscreen.tsx  local_posthog_sync.ts  main.tsx  mode_context.tsx  mode_runner.tsx  mode_selector.tsx  option_context.tsx  option_selector.tsx  provider_context.tsx  provider_selector.tsx  runtime_context.tsx  runtime_selector.tsx  screen_context.tsx  statusbar.tsx  tool_runner.tsx  tool_selector.tsx  types.ts
trace-generator/: run.sh  trace_generator.py
(+121 files in other folders)
